#pragma once
#include "../ui/UiPanelBlueprint.h"

namespace m2 {
	extern const UiPanelBlueprint bulk_sheet_editor_left_hud;
	extern const UiPanelBlueprint bulk_sheet_editor_right_hud;
	extern const UiPanelBlueprint bulk_sheet_editor_main_menu;
	extern const UiPanelBlueprint bulk_sheet_editor_pause_menu;
}  // namespace m2
